--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,8 @@ jobs:
         run: ./gradlew build
       - name: Test with Gradle
         run: ./gradlew test
+      - name: Archive reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: reports
+          path: build/reports
