--- a/.github/workflows/upload-docker-image.yml
+++ b/.github/workflows/upload-docker-image.yml
@@ -12,7 +12,7 @@ jobs:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
-        docker login -u $DOCER_USER -p $DOCKER_PASSWORD
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Docker build
       run: docker build -f dockerfile/akinator-minimal.Dockerfile --tag kibrq/akinator-build:$(date +%s)
     - name: Docker push
