--- a/.github/workflows/upload-docker-image.yml
+++ b/.github/workflows/upload-docker-image.yml
@@ -14,6 +14,6 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Docker build
-      run: docker build -f dockerfile/akinator-minimal.Dockerfile --tag kibrq/akinator-build:$(date +%s)
+      run: docker build -t kibrq/akinator-build:$(date +%s) -f dockerfile/akinator-minimal.Dockerfile .
     - name: Docker push
       run: docker push ${{secrets.DOCKER_USER}}/akinator
