--- a/.github/workflows/upload-docker-image.yml
+++ b/.github/workflows/upload-docker-image.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Docker build
       run: docker build -t kibrq/akinator-build:$(date +%s) -f dockerfile/minimal.Dockerfile .
     - name: Docker push
-      run: docker push ${{secrets.DOCKER_USER}}/akinator
+      run: docker push ${{secrets.DOCKER_USER}}/akinator:latest
