--- a/.github/workflows/upload-docker-image.yml
+++ b/.github/workflows/upload-docker-image.yml
@@ -7,13 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Docker login
-      env: 
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - name: Docker build
-      run: docker build -t kibrq/akinator-build:$(date +%s) -f dockerfile/minimal.Dockerfile .
-    - name: Docker push
-      run: docker push ${{secrets.DOCKER_USER}}/akinator:latest
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: kibrq/akinator:latest
