--- a/.github/workflows/upload-docker-image.yml
+++ b/.github/workflows/upload-docker-image.yml
@@ -13,8 +13,9 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and push
-      id: docker_build
       uses: docker/build-push-action@v2
       with:
+        context: .
+        file: dockerfile/minimal.Dockerfile
         push: true
         tags: kibrq/akinator:latest
